terraform/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keekten-service
spec:
  type: NodePort
  selector:
    app: bff
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
